# Flask-SimpleLogin

./: .gitignore  .readthedocs.yml  .travis.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  flit.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yaml
docs/: conf.py  configuring.md  customizing.md  extras.md  index.rst  requirements.txt  usage.md
docs/source/: conf.py  index.rst
docs/source/demopages/: checking.md  configuring.md  customizing.md  requirements.md
docs/uml/: createitem.puml  sequencelogin.puml
example/: README.md  app.py  manage.py  settings.py  simple_app.py
example/templates/: base.html  index.html  login.html  secret.html
flask_simplelogin/: __init__.py
flask_simplelogin/templates/: login.html
tests/: conftest.py  test_app.py  test_config.py  test_message.py
