[project]
name = "flask_simplelogin"
version = "0.2.0"
description = "Flask Simple Login - Login Extension for Flask"
authors = [{ name = "Bruno Rocha", email = "rochacbruno@users.noreply.github.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Eduardo Cuducos", email = "cuducos@users.noreply.github.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Flask>=1.0.0",
    "Flask-WTF>1.1",
]

[project.urls]
Repository = "https://github.com/flask-extensions/Flask-SimpleLogin"

[dependency-groups]
dev = [
    "ipdb>=0.13.13,<0.14",
    "pytest>=8.3.3,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-flask>=1.3.0,<2",
    "pytest-mock>=3.14.0,<4",
    "pytest-ruff>=0.4.1,<0.5",
    "tox>=4.21.2,<5",
    "tox-uv>=1.27.0,<2",
]
docs = [
    "recommonmark>=0.7.1,<0.8",
    "Sphinx>=8,<9",
    "sphinx-markdown-tables>=0.0.17,<0.0.18",
    "sphinx-rtd-theme>=3.0.1,<4",
]

[tool.uv]

[[tool.uv.index]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format --cov flask_simplelogin --cov-report term --cov-fail-under=70"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py313, py312, py311, py310

[testenv]
commands = uv run pytest
"""
